Fixed error display not visible on image upload (z-index)

--- a/src/app/error-display/error-display.component.scss
+++ b/src/app/error-display/error-display.component.scss
@@ -17,6 +17,7 @@
   background-color: white;
   box-shadow: 2px 2px 5px black;
   text-align: center;
+  z-index: 10000;
 
   mat-icon {
     position: absolute;
